--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -20,7 +20,7 @@ main section.categories-show {
     }
     article {
       .soldout {
-        min-width: 110px;
+        width: 150px;
         background: rgba(224, 14, 14, 0.8);
         border: 1px solid rgba(224, 14, 14, 0.8);
         border-radius: 0.25em;
