--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -6,7 +6,13 @@
       <span><%= humanized_money_with_symbol product.price %></span>
     </h1>
   <% end%>
+  
   <div>
+  <% if product.quantity == 0 %>
+  <article class="soldout">
+  SOLD OUT!
+  </article>
+  <% end %>
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
     method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %> 
