--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+
+<div class="alert alert-success" role="alert">
+  product's count : <%= @product %>
+</div>
+
+<div class="alert alert-success" role="alert">
+Category's count : <%= @category %>
+</div>
